--- a/Assignment2/asg2.html
+++ b/Assignment2/asg2.html
@@ -60,6 +60,9 @@
     <button type="button" id="rightFootButtonOn">ON</button>
     <button type="button" id="rightFootButtonOff">OFF</button>
 
+    <hr>
+    <p>Shift + Click to see my robot walk, use your mouse to rotate camera!</p>
+
     
     <script src="lib/webgl-utils.js"></script>
     <script src="lib/webgl-debug.js"></script>
