--- a/Assignment5C/asg5C.html
+++ b/Assignment5C/asg5C.html
@@ -12,8 +12,7 @@
         }
     </style>
 
-    <p>Welcome to a serene digital landscape where quaint architecture blends harmoniously with nature, featuring charming homes, a stately windmill,</p>
-    <p>and lush greenery, all set against a clear blue sky.</p>
+    <p>Welcome to a serene digital landscape where quaint architecture blends harmoniously with nature, featuring charming homes, a stately windmill, and lush greenery, all set against a clear blue sky.</p>
     <p>Features: a lovely world, 3 different types of light, with gui bar that can control light color and position, camera control with mouse, skybox, and multiple 3d object</p>
     <canvas id="c"></canvas>
     <script type="importmap">
